public interface Bonificable {
    double calcularBonificacion();
}